--- a/views/lpe/usuario/ver.twig
+++ b/views/lpe/usuario/ver.twig
@@ -1,5 +1,7 @@
-{% extends "lpe/master.twig" %} {# ----------------------------------------------------------- #} {% block titulo %}Login{%
-endblock %} {% block body %}
+{% extends "lpe/master.twig" %}
+ {# ----------------------------------------------------------- #} 
+ {% block titulo %}Login{%endblock %}
+ {% block body %}
 
 <div class="container">
     <div class="row">
