--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -228,6 +228,7 @@ background-image: -webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
 background-image: -o-linear-gradient(top,#563d7c 0,#6f5499 100%);
 background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%);
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
+    h4{text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5)}
     @media (max-width: $screen-xs-max) {
         width: 100%;
         height: 150px;
@@ -340,6 +341,10 @@ h1{color:#FFF;}
     background: rgba(0,0,0,0.3); 
     padding: 30px 0;
 }
+}
+#derecho #descripcion{
+    font-size: 14px;
+      line-height: 21px;
 }
 span.badge{
     background-color: $brand-primary;
