--- a/views/lpe/contenido/derecho/comentarioModal.twig
+++ b/views/lpe/contenido/derecho/comentarioModal.twig
@@ -23,7 +23,7 @@
                 </div>
                 <div class="lista-comentarios">
                     {% for comentario in seccion.comentarios %}
-                     {% include 'lpe/derecho/comentario.twig' %}
+                     {% include 'lpe/contenido/derecho/comentario.twig' %}
                       {% endfor %}
                 </div>
             </div>
