--- a/views/lpe/contenido/derecho/ver.twig
+++ b/views/lpe/contenido/derecho/ver.twig
@@ -30,14 +30,12 @@
                         <h5>&nbsp;{{seccion.votos_alta}}/{{seccion.votos_media}}/{{seccion.votos_baja}}<i class="zmdi zmdi zmdi-chart zmdi-hc-fw zmdi-hc-lg"></i></h5>
                     </div>
                     <p class="lead">{{seccion.descripcion}}</p>
-                    <div class="text-center">
                         <h6><b>Importancia de la acción</b></h6>
-                        <div class="btn-group btn-group-justified">
-                            <a href="#" class="btn {{(votos[seccion.id] is not null) && (votos[seccion.id] == 3) ? 'btn-primary disabled','btn-default'}}">Alta</a>
-                            <a href="#" class="btn {{(votos[seccion.id] is not null) && (votos[seccion.id] == 2) ? 'btn-primary disabled','btn-default'}}">Media</a>
-                            <a href="#" class="btn {{(votos[seccion.id] is not null) && (votos[seccion.id] == 1) ? 'btn-primary disabled','btn-default'}}">Baja</a>
+                        <div class="btn-group btn-group-justified" style="margin-bottom:10px;">
+                            <a href="#" class="btn {{((votos[seccion.id] is not null) and (votos[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Alta</a>
+                            <a href="#" class="btn {{((votos[seccion.id] is not null) and (votos[seccion.id] == 2)) ? 'btn-primary disabled' : 'btn-default'}}">Media</a>
+                            <a href="#" class="btn {{((votos[seccion.id] is not null) and (votos[seccion.id] == 1)) ? 'btn-primary disabled' : 'btn-default'}}">Baja</a>
                         </div>
-                    </div>
                     <div class="clearfix">
                         <div class="pull-right">
                             <a href="javascript:void(0)" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" style="margin: 0 10px">Comentar</i></a>
@@ -46,7 +44,7 @@
                             <a href="javascript:void(0)" class="btn btn-link btn-sm" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" data-toggle="tooltip" data-placement="bottom" data-original-title="Ver comentarios"><i class="zmdi zmdi-comments zmdi-hc-lg zmdi-hc-fw"></i> 1</a>
                         </div>
                     </div>
-                    {% include 'lpe/derecho/comentarioModal.twig' %}
+                    {% include 'lpe/contenido/derecho/comentarioModal.twig' %}
                 </div>
                 <hr>
                 {% endfor %}
