--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -35,12 +35,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                        <a class="navbar-brand" href="#"><img src="{{ baseUrl() }}/assets-lpe/img/logo-gob-stafe.png" alt="Logo Santa Fe Provincia"></a>
+                        <a class="navbar-brand" href="{{ urlFor('shwIndex') }}"><img src="{{ baseUrl() }}/assets-lpe/img/logo-gob-stafe.png" alt="Logo Santa Fe Provincia"></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li><a href="#"><i class="zmdi zmdi-home zmdi-hc-fw zmdi-hc-lg"></i>Inicio</a></li>
+                            <li><a href="{{ urlFor('shwIndex') }}"><i class="zmdi zmdi-home zmdi-hc-fw zmdi-hc-lg"></i>Inicio</a></li>
                             <li><a href="#">Propuesta</a></li>
                             <li><a href="#">Antecedentes</a></li>
                             <li><a href="#">Cronograma</a></li>
@@ -57,17 +57,24 @@
                                 </ul>
                             </li>-->
                         </ul>
-
+                        
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#"><i class="zmdi zmdi-sign-in zmdi-hc-lg zmdi-hc-fw"></i>Entrar</a></li>
+                            {% if user is not empty %}
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="zmdi zmdi-account-circle zmdi-hc-lg zmdi-hc-fw"></i> Guillermo <span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-circle" style="width:21px"> {{ user.nombre }} <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Administrar</a></li>
+                                    {% if user and (user.patrulla_id != null) %}
+	<li><a href="{{ urlFor('shwCrearDerecho') }}"><i class="zmdi zmdi-hc-lg zmdi-hc-fw zmdi-plus"></i> Nuevo derecho</a></li>
+	{% endif %}
                                     <li class="divider"></li>
-                                    <li><a href="#" class="text-danger"><b><i class="zmdi zmdi-close-circle zmdi-hc-fw zmdi-hc-lg"></i>Salir</b></a></li>
+                                    <form id="form-salir" action="{{ urlFor('runLogout') }}" method="POST">
+                                    <li><button type="submit" class="btn btn-link btn-sm btn-block text-danger"><b><i class="zmdi zmdi-close-circle zmdi-hc-fw zmdi-hc-lg"></i>Salir</b></button></li>
+                                    </form>
                                 </ul>
                             </li>
+                            {% else %}
+                            <li><a href="{{ urlFor('shwLogin') }}"><i class="zmdi zmdi-sign-in zmdi-hc-lg zmdi-hc-fw"></i>Entrar</a></li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
@@ -84,15 +91,20 @@
                 </div>
             </div>
 
-            {% endif %} {% if flash['errors'] is defined %} {% for error in flash['errors'] %}
+            {% endif %} {% if flash['errors'] is defined %} 
             <div class="row">
                 <div class="alert alert-dismissible alert-danger">
-                    <button type="button" class="close" data-dismiss="alert">&times;</button> {{ error|capitalize }}
+                    <button type="button" class="close" data-dismiss="alert">&times;</button> 
+                    <ul class="list-unstyled">
+            {% for error in flash['errors'] %}
+                    <li><i class="zmdi zmdi-close zmdi-hc-fw zmdi-hc-lg"></i> {{ error|capitalize }}</li>
+            {% endfor %}
+                    </ul>
                 </div>
 
             </div>
 
-            {% endfor %} {% endif %} {% if flash['warning'] is defined %}
+             {% endif %} {% if flash['warning'] is defined %}
             <div class="row">
                 <div class="alert alert-dismissible alert-warning">
                     <button type="button" class="close" data-dismiss="alert">&times;</button> {{ flash.warning|capitalize
