--- a/views/lpe/contenido/derecho/crear.twig
+++ b/views/lpe/contenido/derecho/crear.twig
@@ -106,6 +106,13 @@
             input.val(log);
         }
     });
+
+    $(window).keydown(function(event){
+    if(event.keyCode == 13) {
+      event.preventDefault();
+      return false;
+    }
+  });
     });
     $('input[name=video]').change(function() {
         $("#youtubeVideo iframe").remove();
@@ -159,7 +166,6 @@
         secciones.push($( this ).val());
         });
         var seccionesString = secciones.join("&&")
-        alert(seccionesString)
         $('input[name=secciones]').val(seccionesString);
         return true;
 });
