agregado seccion.derecho_id

--- a/views/lpe/contenido/derecho/crear.twig
+++ b/views/lpe/contenido/derecho/crear.twig
@@ -58,7 +58,7 @@
                     <label class="control-label">Video de Youtube</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="zmdi zmdi-youtube-play zmdi-hc-lg"></i></span>
-                        <input name="video" class="form-control" placeholder="Ej: 7uulVAHwXi0" type="text">
+                        <input name="video" class="form-control" type="text" value="7uulVAHwXi0">
                     </div>
                 </div>
                 <div class="alert alert-dismissible alert-info">
