Muchos cambios.. perdon, el commit va a ir asi pelado sin mucho mensaje..

--- a/views/lpe/contenido/derecho/comentario.twig
+++ b/views/lpe/contenido/derecho/comentario.twig
@@ -1,18 +1,74 @@
 <div class="row">
-    <div class="col-xs-1 col-sm-offset-1 text-center">
+    <div class="col-xs-1 col-xs-offset-1 text-center">
         <a href="{{ urlFor('shwUsuario',{'idUsu': comentario.autor.id}) }}">
             <img src="{{ avatarUrl(comentario.autor.img_tipo, comentario.autor.img_hash, 32) }}" class="img-circle" style="margin:0 auto 5px" alt="">
-            </a>
-    </div>
-    <div class="col-xs-11 col-sm-9">
-        <div class="clearfix">
-            <span class="pull-left text-info" style="margin-top:0"><strong>{{ comentario.autor.nombre }} {{ comentario.autor.apellido }}</strong></span>
-            <div class="pull-right">
-                <a href=""><i class="zmdi zmdi-alert-triangle zmdi-hc-fw zmdi-hc-lg"></i>Moderar</a> <a href=""><i class="zmdi zmdi-close zmdi-hc-lg zmdi-hc-fw"></i>Eliminar</a>
-            </div>
-        </div>
+        </a>
+     </div>
+    <div class="col-xs-10 col-sm-9">
+        <span class="pull-left text-info" style="margin-top:0"><strong>{{ comentario.autor.nombre }} {{ comentario.autor.apellido }}</strong></span>
+        <br>
         <p class="comentario">
+            <span class="pull-right"></span>
             {{ comentario.cuerpo|nl2br }}
         </p>
+            {% if user %}
+        <ul class="list-inline" style="border-bottom: 1px solid #83c8ff;">
+            <li><a href="javascript:votarComentario({{comentario.id}},1)" style="text-decoration:none;"><span class="text-success" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><b><i class="zmdi zmdi-long-arrow-up"></i> {{comentario.votos}}</a></b></li>
+            <li><a href="javascript:votarComentario({{comentario.id}},-1)" style="text-decoration:none;"><span class="text-danger" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><b><i class="zmdi zmdi-long-arrow-down"></i></a></b></li>
+            <li><a href="javascript:verBoxResponder({{comentario.id}})"><small>Responder</small></a></li>
+            {% if user and (user.patrulla_id != null) %}
+            <li><a href="javascript:sancionar({{comentario.autor.id}})"><small><i class="zmdi zmdi-alert-triangle zmdi-hc-fw zmdi-hc-lg"></i>Moderar</small></a></li>
+            {% endif %} 
+            {% if user and (user.patrulla_id != null) %}
+            <li><a href=""><small><i class="zmdi zmdi-close zmdi-hc-lg zmdi-hc-fw"></i>Eliminar</small></a></li>
+            {% endif %}
+        </ul>
+            {% endif %} 
+        <div id="respComentario-{{comentario.id}}" class="well well" style="display:none">
+            <form class="form-horizontal" action="{{ urlFor('runComentar', {'tipoRaiz': 'comentario', 'idRaiz': comentario.id }) }}" method="POST">
+                <div class="form-group" style="margin-bottom:0">
+                    <label class="col-xs-1 text-center"><img src="{{baseUrl()}}/assets/img/anon32.jpg" class="img-circle" style="width: 25px; margin:0 auto 5px" alt=""></label>
+                    <div class="col-xs-11">
+                        <span class="text-info"><strong>{{ user.nombre }} {{ user.apellido}}</strong></span>
+                        <textarea name="cuerpo" class="form-control input-sm" rows="2" placeholder="Escriba aqui su comentario..."></textarea>
+                        <div class="clearfix" style="margin-top: 10px">
+                            <button type="reset" class="btn btn-default btn-xs">Cancelar</button>
+                            <button type="submit" class=" pull-right btn btn-primary btn-xs">Enviar comentario</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="lista-respuestas">
+
+            {% if comentario.respuestas|length > 0 %}
+            {% for respuesta in comentario.respuestas %}
+            <div class="col-xs-1 text-center">
+                <a href="{{ urlFor('shwUsuario',{'idUsu': comentario.autor.id}) }}">
+                    <img src="{{ avatarUrl(comentario.autor.img_tipo, comentario.autor.img_hash, 32) }}" class="img-circle" style="width: 25px; margin:0 auto 5px" alt="">
+                </a>
+            </div>
+            <div class="col-xs-11" style="padding-right:0">
+                <span class="pull-left text-info" style="margin-top:0"><strong>
+                    {{ respuesta.autor.nombre }} {{ respuesta.autor.apellido }}</strong></span>
+                <br>
+                <p class="comentario">
+                    {{ respuesta.cuerpo|nl2br }}
+                </p>
+                    {% if user %}
+                <ul class="list-inline" style="border-bottom: 1px solid #83c8ff;">
+            <li><a href="javascript:votarComentario({{respuesta.id}},1)" style="text-decoration:none;"><span class="text-success" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><b><i class="zmdi zmdi-long-arrow-up"></i> {{respuesta.votos}}</a></b></li>
+            <li><a href="javascript:votarComentario({{respuesta.id}},-1)" style="text-decoration:none;"><span class="text-danger" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><b><i class="zmdi zmdi-long-arrow-down"></i></a></b></li>
+            <li><a href="javascript:verBoxResponder({{comentario.id}})"><small>Responder</small></a></li>
+                    {% if user and (user.patrulla_id != null) %}
+                    <li><a href="javascript:sancionar({{respuesta.autor.id}})"><small><i class="zmdi zmdi-alert-triangle zmdi-hc-fw zmdi-hc-lg"></i>Moderar</small></a></li>
+                    <li><a href="#"><small><i class="zmdi zmdi-close zmdi-hc-lg zmdi-hc-fw"></i>Eliminar</small></a></li>
+                    {% endif %}
+                </ul>
+            {% endif %} 
+            </div>
+                {% endfor %}
+                 {% endif %}
+        </div>
     </div>
 </div>
