--- a/views/lpe/contenido/derecho/comentarioModal.twig
+++ b/views/lpe/contenido/derecho/comentarioModal.twig
@@ -1,30 +1,30 @@
 <div id="comentarios{{ seccion.id }}" class="modal fade">
-    <div class="modal-dialog">
+    <div class="modal-dialog ">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title">Comentarios</h4>
             </div>
             <div class="modal-body">
+                {% if user is not null %}
                 <div class="well">
                     <form class="form-horizontal" action="{{ urlFor('runComentar', {'tipoRaiz': 'seccion' , 'idRaiz': seccion.id}) }}" method="POST">
-                        <div class="form-group">
+                        <div class="form-group" style="margin-bottom:0">
                             <label class="col-xs-1 col-sm-offset-1 text-center"><img src="{{baseUrl()}}/assets/img/anon32.jpg" class="img-circle" style="margin:0 auto 5px" alt=""></label>
                             <div class="col-xs-11 col-sm-9">
-                                <span class="text-info"><strong>Guillermo CROPPI</strong></span>
-                                <textarea name="ccuerpo" class="form-control input-sm" rows="2" placeholder="Escriba aqui su comentario..."></textarea>
+                                <span class="text-info"><strong>{{ user.nombre }} {{ user.apellido}}</strong></span>
+                                <textarea name="cuerpo" class="form-control input-sm" rows="2" placeholder="Escriba aqui su comentario..."></textarea>
                                 <div class="clearfix" style="margin-top: 10px">
-                                    <button type="reset" class="btn btn-default btn-sm">Cancelar</button>
-                                    <button type="submit" class=" pull-right btn btn-primary btn-sm">Enviar comentario</button>
+                                    <button type="reset" class="btn btn-default btn-xs">Cancelar</button>
+                                    <button type="submit" class=" pull-right btn btn-primary btn-xs">Enviar comentario</button>
                                 </div>
                             </div>
                         </div>
                     </form>
                 </div>
+                {% endif %}
                 <div class="lista-comentarios">
-                    {% for comentario in seccion.comentarios %}
-                     {% include 'lpe/contenido/derecho/comentario.twig' %}
-                      {% endfor %}
+                    {% for comentario in seccion.comentarios %} {% include 'lpe/contenido/derecho/comentario.twig' %} {% endfor %}
                 </div>
             </div>
             <div class="modal-footer">
