--- a/views/lpe/contenido/derecho/ver.twig
+++ b/views/lpe/contenido/derecho/ver.twig
@@ -9,7 +9,9 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <h1><strong>{{ derecho.titulo }}</strong></h1>
+                        {% if user and (user.patrulla_id != null) %}
                         <h6><a href="#" class="btn btn-default"><i class="zmdi zmdi-edit zmdi-hc-lg zmdi-hc-fw"></i>Editar derecho</a> <a href="#" class="btn btn-warning"><i class="zmdi zmdi-close zmdi-hc-lg zmdi-hc-fw"></i>Eliminar</a></h6>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -23,25 +25,26 @@
                     <p>{{ derecho.descripcion|bbCode }}</p>
                 </div>
                 <hr>
-                <h3><strong>Acciones</strong></h3>
                 {% for seccion in derecho.secciones %}
                     <div class="accion">
                     <div class="pull-right" style="margin-left:20px">
-                        <h5>&nbsp;{{seccion.votos_alta}}/{{seccion.votos_media}}/{{seccion.votos_baja}}<i class="zmdi zmdi zmdi-chart zmdi-hc-fw zmdi-hc-lg"></i></h5>
+                        {% set ptj = (seccion.votos_alta * 3) + (seccion.votos_media * 2) + (seccion.votos_baja * 1) %}
+                        <!--<h5>&nbsp;{{seccion.votos_alta}}/{{seccion.votos_media}}/{{seccion.votos_baja}}<i class="zmdi zmdi zmdi-chart zmdi-hc-fw zmdi-hc-lg"></i></h5>-->
+                        <h5 class="text-success">&nbsp;{{ptj}}<i class="zmdi zmdi-long-arrow-up zmdi-hc-fw zmdi-hc-lg"></i></h5>
                     </div>
                     <p class="lead">{{seccion.descripcion}}</p>
                         <h6><b>Importancia de la acción</b></h6>
                         <div class="btn-group btn-group-justified" style="margin-bottom:10px;">
-                            <a href="#" class="btn {{((votos[seccion.id] is not null) and (votos[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Alta</a>
-                            <a href="#" class="btn {{((votos[seccion.id] is not null) and (votos[seccion.id] == 2)) ? 'btn-primary disabled' : 'btn-default'}}">Media</a>
-                            <a href="#" class="btn {{((votos[seccion.id] is not null) and (votos[seccion.id] == 1)) ? 'btn-primary disabled' : 'btn-default'}}">Baja</a>
+                            <a href="javascript:votarSeccion({{seccion.id}},3)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 3)) ? 'btn-primary disabled' : 'btn-default'}}">Alta</a>
+                            <a href="javascript:votarSeccion({{seccion.id}},2)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 2)) ? 'btn-primary disabled' : 'btn-default'}}">Media</a>
+                            <a href="javascript:votarSeccion({{seccion.id}},1)" class="btn {{((voto[seccion.id] is not null) and (voto[seccion.id] == 1)) ? 'btn-primary disabled' : 'btn-default'}}">Baja</a>
                         </div>
                     <div class="clearfix">
                         <div class="pull-right">
                             <a href="javascript:void(0)" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" style="margin: 0 10px">Comentar</i></a>
                             <!--<img src="https://unsplash.it/300/300/?random" class="img-circle size32" data-toggle="tooltip" data-placement="bottom" data-original-title="Usuario1"
                                 alt="Avatar">-->
-                            <a href="javascript:void(0)" class="btn btn-link btn-sm" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" data-toggle="tooltip" data-placement="bottom" data-original-title="Ver comentarios"><i class="zmdi zmdi-comments zmdi-hc-lg zmdi-hc-fw"></i> 1</a>
+                            <a href="javascript:void(0)" class="btn btn-link btn-sm" data-toggle="modal" data-target="#comentarios{{ seccion.id }}" data-toggle="tooltip" data-placement="bottom" data-original-title="Ver comentarios"><i class="zmdi zmdi-comments zmdi-hc-lg zmdi-hc-fw"></i>{{seccion.comentarios|length}}</a>
                         </div>
                     </div>
                     {% include 'lpe/contenido/derecho/comentarioModal.twig' %}
@@ -60,21 +63,28 @@
                     <div class="panel-body tag-opinion" style="background-image: url('https://unsplash.it/505/300/?random');">
                         <a href="javascript:void(0)" data-toggle="modal" data-target="#opinion{{loop.index}}">
                             <div class="overlay">
-                                <h5><small>La opinión de..</small><br><b>##TODO##</b></h5>
+                                <h5><small>La opinión de..</small><br><b>{{opinion.participante.nombre}}#</b></h5>
                             </div>
                         </a>
                     </div>
                 </div>
                 {% include 'lpe/opinion/ver.twig' %}
                 {% endfor %}
-                <a href="#" class="btn btn-primary btn-block"><i class="zmdi zmdi-plus zmdi-hc-lg zmdi-hc-fw"></i>Nueva Opinion</a>
+                <a href="{{ urlFor('shwCrearOpinion')}}" class="btn btn-primary btn-block"><i class="zmdi zmdi-plus zmdi-hc-lg zmdi-hc-fw"></i>Nueva Opinion</a>
             </div>
         </div>
 </article>
-
+{% if user and (user.patrulla_id != null) %}
+{% include 'lpe/contenido/moderar.twig' %}
+{% endif %}
+<form id="votarSeccion" method="POST">
+	<input type="hidden" type="text" name="postura">
+</form>
+<form id="votarComentario" method="POST">
+	<input type="text" name="valor" style="display:none">
+</form>
 {% endblock %} {# ----------------------------------------------------------- #} {% block scripts %}
 <script src="{{ baseUrl() }}/assets-lpe/js/autosize.min.js"></script>
-
 <script>
     $(document).ready(function() {
         autosize($('textarea'));
@@ -83,5 +93,27 @@
   $('[data-toggle="tooltip"]').tooltip();
 })
 
-    })     
-</script> {% endblock %}
+    }) 
+
+    var votarSeccion = function(id, valor){
+		var action_no = "{{ urlFor('runVotarSeccion') }}";
+		$('#votarSeccion').find('input[name="postura"]').val(valor)
+		var action_yes = action_no.replace(':idSec',id);
+		$('#votarSeccion').attr('action', action_yes);
+		$('#votarSeccion').submit();
+	}
+
+    var verBoxResponder = function(id){
+        $('#respComentario-'+id).toggle();
+	}
+
+    var votarComentario = function(id, valor){
+		var action_no = "{{ urlFor('runVotarComenta') }}";
+		$('#votarComentario').find('input[name="valor"]').val(valor)
+		var action_yes = action_no.replace(':idCom',id);
+		$('#votarComentario').attr('action', action_yes);
+		$('#votarComentario').submit();
+	}      
+</script>
+{% include 'lpe/contenido/moderar.js.twig' %}
+{% endblock %}
