--- a/views/lpe/contenido/evento/crear.twig
+++ b/views/lpe/contenido/evento/crear.twig
@@ -91,9 +91,9 @@
 
 
     // Evito que agreguen un retorno de carro.
-    $("textarea[name='titulo']").keypress(function(event) {
-        if (event.keyCode == 13) {
-            event.preventDefault();
-        }
-    });
+    // $("textarea[name='titulo']").keypress(function(event) {
+    //     if (event.keyCode == 13) {
+    //         event.preventDefault();
+    //     }
+    // });
 </script> {% endblock %}
