--- a/views/contenido/comentarios.twig
+++ b/views/contenido/comentarios.twig
@@ -103,7 +103,7 @@
 											<a class="link puntos" href="javascript:void(0)">
 												<i class="fa fa-fw fa-trophy"></i> {{ respuesta.autor.puntos }}
 											</a>
-											<a class="link down" href="javascript:javascript:votarComentario({{respuesta.id}},-1)">
+											<a class="link down" href="javascript:votarComentario({{respuesta.id}},-1)">
 												<i class="fa fa-fw fa-thumbs-o-down"></i></a>
 											<a class="link up" href="javascript:votarComentario({{respuesta.id}},1)">
 												<i class="fa fa-fw fa-thumbs-o-up"></i> {{ respuesta.votos }}</a>
