--- a/views/lpe/contenido/opinion/crear.twig
+++ b/views/lpe/contenido/opinion/crear.twig
@@ -3,12 +3,12 @@
 %} {% block body %}
 <form>
 <article>
-    <div class="titulo-derecho-background" style="background-image: url('https://unsplash.it/1200/400/?random');">
+    <div class="titulo-derecho-background" >
         <div class="overlay">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h1><strong>Neque porro quisquam est</strong></h1>
+                        <h1><strong>Nueva opinion</strong></h1>
                     </div>
                 </div>
             </div>
@@ -19,9 +19,32 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-            <h3><strong>Nueva opinion</strong></h3>
             <h5>La opinion de...</h5>
-            <input type="text" class="form-control input-lg" style="text-align: center" placeholder="¿De quien es?">
+            <!--<input type="text" class="form-control input-lg" style="text-align: center" placeholder="¿De quien es?">-->
+            <select name="participante" class="form-control">
+                <option value="" disabled selected>Seleccione un participante</option>            
+                {% for participante in participantes %}
+                <option value="{{participante.id}}">{{participante.descripcion}}</option>
+                {% endfor %}
+            </select>
+            <div class="form-group">
+            <h5>Dicho en...</h5>
+                <select name="evento" class="form-control">
+                <option value="" disabled selected>Seleccione el evento</option>     
+                {% for evento in eventos %}
+                <option value="{{evento.id}}">{{evento.titulo}}</option>
+                {% endfor %}
+            </select>
+            </div>
+            <div class="form-group">
+            <h5>Acerca de..</h5>
+            <select name="derecho" class="form-control">
+                <option value="" disabled selected>Seleccione el derecho</option>     
+                {% for derecho in derechos %}
+                <option value="{{derecho.id}}">{{ derecho.titulo }}</option>
+                {% endfor %}
+            </select>
+            </div>
             <hr>
             <div class="form-group">
                     <label class="control-label">Imagen asociada a la opinión</label><br>
@@ -42,7 +65,7 @@
             <hr>
             <div class="clearfix">
                 <a href="#" class="pull-left btn btn-link">Cancelar</a>
-                <button type=submit class="pull-right btn btn-primary">Subir opinion</a>
+                <button type=submit class="pull-right btn btn-primary">Crear opinion</button>
             </div>
         </div>
 
